add loading screen

--- a/PetShop/src/main/resources/templates/index.html
+++ b/PetShop/src/main/resources/templates/index.html
@@ -130,7 +130,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light sticky-top shadow p-0 bg-white">
+<nav class="navbar navbar-expand-xl navbar-light sticky-top shadow p-0 bg-white">
     <div class="container">
         <!-- BRAND -->
         <a class="navbar-brand" href="#">
@@ -146,12 +146,12 @@
              data-bs-scroll="true" id="offcanvasNavbar" tabindex="-1" style="background: white">
             <!--            sidebar-header-->
             <div class="offcanvas-header border-top font-color">
-                <button aria-label="Close" class=" btn-close btn-close-white shadow-0" data-bs-dismiss="offcanvas"
+                <button aria-label="Close" class=" btn-close shadow-0" data-bs-dismiss="offcanvas"
                         type="button">
                 </button>
             </div>
-            <div class="offcanvas-body justify-content-center flex-grow-1 pe-3">
-                <ul class="navbar-nav mb-2 mb-lg-0 justify-content-center">
+            <div class="offcanvas-body">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item text-center">
                         <a class="nav-link active background-color text-white fw-bold" aria-current="page" href="#">Trang
                             chủ</a>
@@ -165,14 +165,14 @@
                     <li class="nav-item text-center">
                         <a class="nav-link menu-item" href="#">Dịch vụ</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
-                    </li>
+                    </li>-->
                 </ul>
-                <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end">
+                <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
                     <li class="nav-item text-center">
                         <a class="nav-link menu-item" href="/login">Login</a>
                     </li>
@@ -184,6 +184,9 @@
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link menu-item" href="/user">User</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/cart">Giỏ hàng</a>
                     </li>
                 </ul>
             </div>
@@ -247,7 +250,7 @@
                 </h1>
                 <h2 class="mt-4">Lên tới 50%</h2>
                 <p class="mt-3">Chỉ còn 100.000đ - 200.000đ, số lượng có hạn !</p>
-                <button class="btn btn-light mt-4 py-2 px-4"
+                <button class="btn btn-light mt-4 py-2 px-4 color"
                         style="position: absolute; bottom: 10%; left: 50%; transform: translateX(-50%);">
                     Xem ngay
                 </button>
@@ -883,8 +886,8 @@
         </div>
     </div>
 </footer>
-<div th:insert=" ~{/module/_backToTop}">
-</div>
+<div th:insert=" ~{/module/_backToTop}"></div>
+<div th:insert=" ~{/module/_loadingSpinner}"></div>
 </body>
 <!--    BOOTSTRAP5-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
