--- a/PetShop/src/main/resources/templates/index.html
+++ b/PetShop/src/main/resources/templates/index.html
@@ -75,6 +75,14 @@
             transform: scale(1.1) rotate(5deg);
         }
 
+        h1 {
+            font-size: 1.9rem !important;
+        }
+
+        h2 {
+            font-size: 1.7rem !important;
+        }
+
         h3 {
             font-size: 1.5rem !important;
         }
@@ -92,6 +100,14 @@
         }
 
         @media (max-width: 992px) {
+            h1 {
+                font-size: 1.7rem !important;
+            }
+
+            h2 {
+                font-size: 1.5rem !important;
+            }
+
             h3 {
                 font-size: 1.2rem !important;
             }
@@ -110,6 +126,14 @@
         }
 
         @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5rem !important;
+            }
+
+            h2 {
+                font-size: 1.3rem !important;
+            }
+
             h3 {
                 font-size: 1rem !important;
             }
@@ -934,7 +958,7 @@
     <div class="row g-0 py-3">
         <div class="my-3">
             <h1 class="m-0 color fw-bold">Đăng ký nhận thông tin mới nhất</h1>
-            <div class="line background-color" style="height: 10px;"></div>
+            <div class="line background-color" style="height: 5px;"></div>
         </div>
         <div class="col-lg-6">
             <div class="card position-relative">
@@ -979,13 +1003,13 @@
     <!--NHAN VIEN CHAM SOC KHACH HANG-->
     <div class="my-3">
         <h1 class="m-0 color fw-bold">Nhân viên chăm sóc khách hàng</h1>
-        <div class="line background-color" style="height: 10px;"></div>
+        <div class="line background-color" style="height: 5px;"></div>
     </div>
-    <div class="row g-4 justify-content-center">
+    <div class="row g-2 justify-content-center">
         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="card border-0 shadow p-3">
                 <div class="overflow-hidden rounded-circle mx-auto"
-                     style="width: 15vw;height: 15vw;">
+                     style="width: 5rem;height: 5rem">
                     <img loading="lazy" src="/images/user/user-placeholder.png" class="w-100" alt=""
                          style="object-fit: cover;">
                 </div>
@@ -1000,7 +1024,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="card border-0 shadow p-3">
                 <div class="overflow-hidden rounded-circle mx-auto"
-                     style="width: 15vw;height: 15vw;">
+                     style="width: 5rem;height: 5rem">
                     <img loading="lazy" src="/images/user/user-placeholder.png" class="w-100" alt=""
                          style="object-fit: cover;">
                 </div>
@@ -1015,7 +1039,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="card border-0 shadow p-3">
                 <div class="overflow-hidden rounded-circle mx-auto"
-                     style="width: 15vw;height: 15vw;">
+                     style="width: 5rem;height: 5rem">
                     <img loading="lazy" src="/images/user/user-placeholder.png" class="w-100" alt=""
                          style="object-fit: cover;">
                 </div>
@@ -1030,7 +1054,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="card border-0 shadow p-3">
                 <div class="overflow-hidden rounded-circle mx-auto"
-                     style="width: 15vw;height: 15vw;">
+                     style="width: 5rem;height: 5rem">
                     <img loading="lazy" src="/images/user/user-placeholder.png" class="w-100" alt=""
                          style="object-fit: cover;">
                 </div>
@@ -1045,7 +1069,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
             <div class="card border-0 shadow p-3">
                 <div class="overflow-hidden rounded-circle mx-auto"
-                     style="width: 15vw;height: 15vw;">
+                     style="width: 5rem;height: 5rem">
                     <img loading="lazy" src="/images/user/user-placeholder.png" class="w-100" alt=""
                          style="object-fit: cover;">
                 </div>
@@ -1057,7 +1081,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </main>
 <footer class="bg-white py-4 container">
