--- a/PetShop/src/main/resources/templates/index.html
+++ b/PetShop/src/main/resources/templates/index.html
@@ -1100,8 +1100,12 @@
                 <p>Email: contact@petzone.vn</p>
                 <p>Giờ mở cửa:</p>
                 <ul class="list-unstyled">
-                    <li>Thứ 2 - Thứ 7: 8:00 - 20:00</li>
-                    <li>Chủ nhật: 9:00 - 18:00</li>
+                    <li>
+                        <h4>Thứ 2 - Thứ 7: 8:00 - 20:00</h4>
+                    </li>
+                    <li>
+                        <h4>Chủ Nhật: 9:00 - 18:00</h4>
+                    </li>
                 </ul>
                 <div>
                     <a href="#"><i class="fab fa-facebook fa-2x me-2"></i></a>
