--- a/PetShop/src/main/resources/templates/_cartDetail.html
+++ b/PetShop/src/main/resources/templates/_cartDetail.html
@@ -138,6 +138,7 @@
                 </tr>
                 </thead>
                 <tbody class="table-group-divider text-body-secondary">
+                <!--ITEMS-->
                 <tr class="text-center align-middle">
                     <td>1</td>
                     <td>
@@ -154,8 +155,75 @@
                                     <i class="text-body-secondary fa-solid fa-minus"></i>
                                 </button>
                             </span>
-                            <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)"
-                                   value="1" style="width: 50px;">
+                            <input type="number" class="form-control text-center"
+                                   aria-label="Amount (to the nearest dollar)"
+                                   value="1" style="width: 20px;">
+                            <span class="input-group-text p-0 rounded-0">
+                                <button class="btn d-flex justify-content-center">
+                                    <i class="text-body-secondary fa-solid fa-plus"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </td>
+                    <td>100.000đ</td>
+                    <td>
+                        <button class="btn">
+                            <i class="fs-2 text-danger fa-solid fa-xmark"></i>
+                        </button>
+                    </td>
+                </tr>
+                <tr class="text-center align-middle">
+                    <td>1</td>
+                    <td>
+                        <img src="/images/pet/pet-placeholder.png" alt="product" style="width: 100px;">
+                    </td>
+                    <td class="fw-bold">
+                        Áo khoác thú
+                    </td>
+                    <td>100.000đ</td>
+                    <td>
+                        <div class="input-group d-flex justify-content-center">
+                            <span class="input-group-text p-0 rounded-0">
+                                <button class="btn d-flex justify-content-center">
+                                    <i class="text-body-secondary fa-solid fa-minus"></i>
+                                </button>
+                            </span>
+                            <input type="number" class="form-control text-center"
+                                   aria-label="Amount (to the nearest dollar)"
+                                   value="1" style="width: 20px;">
+                            <span class="input-group-text p-0 rounded-0">
+                                <button class="btn d-flex justify-content-center">
+                                    <i class="text-body-secondary fa-solid fa-plus"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </td>
+                    <td>100.000đ</td>
+                    <td>
+                        <button class="btn">
+                            <i class="fs-2 text-danger fa-solid fa-xmark"></i>
+                        </button>
+                    </td>
+                </tr>
+                <tr class="text-center align-middle">
+                    <td>1</td>
+                    <td>
+                        <img src="/images/pet/pet-placeholder.png" alt="product" style="width: 100px;">
+                    </td>
+                    <td class="fw-bold">
+                        Áo khoác thú
+                    </td>
+                    <td>100.000đ</td>
+                    <td>
+                        <div class="input-group d-flex justify-content-center">
+                            <span class="input-group-text p-0 rounded-0">
+                                <button class="btn d-flex justify-content-center">
+                                    <i class="text-body-secondary fa-solid fa-minus"></i>
+                                </button>
+                            </span>
+                            <input type="number" class="form-control text-center"
+                                   aria-label="Amount (to the nearest dollar)"
+                                   value="1" style="width: 20px;">
                             <span class="input-group-text p-0 rounded-0">
                                 <button class="btn d-flex justify-content-center">
                                     <i class="text-body-secondary fa-solid fa-plus"></i>
@@ -184,9 +252,9 @@
                 </button>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-4 bg-light">
             <div class="my-2">
-                <h1 class="m-0 color fw-bold">THÀNH TIỀN</h1>
+                <h1 class="m-0 color fw-bold">TÓM TẮT</h1>
                 <div class="line background-color" style="height: 5px;"></div>
             </div>
             <div class="mb-3">
@@ -202,14 +270,14 @@
                 </div>
             </div>
             <div class="">
-                <p>Giá tiền gốc: <span class="float-end">400.000đ</span></p>
-                <p>Phí vận chuyển: <span class="float-end">30.000đ</span></p>
-                <p>Tiết kiệm được: <span class="float-end text-danger fst-italic">-15.000đ</span></p>
+                <h4 class="mb-4">Giá tiền gốc: <span class="float-end">400.000đ</span></h4>
+                <h4 class="mb-4">Phí vận chuyển: <span class="float-end">30.000đ</span></h4>
+                <h4 class="mb-4">Tiết kiệm được: <span class="float-end text-danger fst-italic">-15.000đ</span></h4>
             </div>
             <hr>
             <div class="d-flex justify-content-between">
-                <h4 class="fw-bold">Tổng</h4>
-                <h4 class="fw-bold text-danger">415.000đ</h4>
+                <h3 class="fw-bold">Thành tiền</h3>
+                <h3 class="fw-bold text-danger">415.000đ</h3>
             </div>
             <div class="mt-3 d-flex justify-content-center">
                 <button class="btn button-decor background-color rounded-5 px-5 py-3 text-white">Thanh toán</button>
