--- a/PetShop/src/main/resources/templates/index.html
+++ b/PetShop/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" th:fragment="home(view)" xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="/images/logo/logo.png" type="image/x-icon">
     <!--    BOOTSTRAP5-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--    FONT-GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-        rel="stylesheet">
+            href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+            rel="stylesheet">
     <!--    FONTAWESOME-->
     <script src="https://kit.fontawesome.com/246169b37f.js" crossorigin="anonymous"></script>
     <style>
@@ -168,119 +168,119 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-xl navbar-light sticky-top shadow p-0 bg-white">
-        <div class="container">
-            <!-- BRAND -->
-            <a class="navbar-brand" href="/">
-                <img loading="lazy" alt="brand" src="/images/logo/logo-2.png" style="width: 225px;">
-            </a>
-            <!--        button toggle-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+<nav class="navbar navbar-expand-xl navbar-light sticky-top shadow p-0 bg-white">
+    <div class="container">
+        <!-- BRAND -->
+        <a class="navbar-brand" href="/">
+            <img loading="lazy" alt="brand" src="/images/logo/logo-2.png" style="width: 225px;">
+        </a>
+        <!--        button toggle-->
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!--        offcanvas-->
-            <div aria-labelledby="offcanvasNavbarLabel" class="offcanvas offcanvas-end w-100" data-bs-backdrop="true"
-                data-bs-scroll="true" id="offcanvasNavbar" tabindex="-1" style="background: white">
-                <!--            sidebar-header-->
-                <div class="offcanvas-header border-top font-color">
-                    <button aria-label="Close" class=" btn-close shadow-0" data-bs-dismiss="offcanvas" type="button">
-                    </button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item text-center">
-                            <a class="nav-link active background-color text-white fw-bold" aria-current="page"
-                                href="#">Trang
-                                chủ</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="#">Cửa hàng</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="#">Thú cưng</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="#">Dịch vụ</a>
-                        </li>
-                        <!--<li class="nav-item">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--        offcanvas-->
+        <div aria-labelledby="offcanvasNavbarLabel" class="offcanvas offcanvas-end w-100" data-bs-backdrop="true"
+             data-bs-scroll="true" id="offcanvasNavbar" tabindex="-1" style="background: white">
+            <!--            sidebar-header-->
+            <div class="offcanvas-header border-top font-color">
+                <button aria-label="Close" class=" btn-close shadow-0" data-bs-dismiss="offcanvas" type="button">
+                </button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item text-center">
+                        <a class="nav-link active background-color text-white fw-bold" aria-current="page"
+                           href="#">Trang
+                            chủ</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="#">Cửa hàng</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="#">Thú cưng</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="#">Dịch vụ</a>
+                    </li>
+                    <li class="nav-item">
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
-                    </li>-->
-                    </ul>
-                    <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="/login">Login</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="/register">Register</a>
-                        </li>
-                        <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item text-center">
-                            <a class="nav-link menu-item" href="/admin">Admin</a>
-                        </li>
-                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item text-center">
-                            <a class="nav-link menu-item" href="/user">User</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link menu-item" href="/cart">Giỏ hàng</a>
-                        </li>
-                    </ul>
-                </div>
+                    </li>
+                </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/register">Register</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/quan-tri-he-thong">Quản trị</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_USER')" class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/user">User</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link menu-item" href="/cart">Giỏ hàng</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </nav>
-    <main class="container py-3 bg-white" th:insert="${view}">
+    </div>
+</nav>
+<main class="container py-3 bg-white" th:insert="${view}">
 
-    </main>
-    <footer class="bg-white py-4 container">
-        <div class="container">
-            <div class="row">
-                <!-- Logo -->
-                <div
+</main>
+<footer class="bg-white py-4 container">
+    <div class="container">
+        <div class="row">
+            <!-- Logo -->
+            <div
                     class="col-md-4 d-flex justify-content-center justify-content-md-start align-items-center flex-column">
-                    <img loading="lazy" src="/images/logo/logo-2.png" alt="Pet Ninja Logo" class="img-fluid"
-                        style="min-width: 300px;">
-                    <h1 class="mt-2 color fw-bold">PET NINJA</h1>
-                </div>
-                <!-- Contact Information -->
-                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                    <h5 class="fw-bold">Cửa hàng Thú Cưng <span class="text-danger">PET NINJA</span></h5>
-                    <p>Địa chỉ: 123 Đường ABC, Phường XYZ, Quận 1, TP Hồ Chí Minh</p>
-                    <p>Điện thoại: (028) 1234 5678</p>
-                    <p>Email: contact@petzone.vn</p>
-                    <p>Giờ mở cửa:</p>
-                    <ul class="list-unstyled">
-                        <li>
-                            <h4>Thứ 2 - Thứ 7: 8:00 - 20:00</h4>
-                        </li>
-                        <li>
-                            <h4>Chủ Nhật: 9:00 - 18:00</h4>
-                        </li>
-                    </ul>
-                    <div>
-                        <a href="#"><i class="fab fa-facebook fa-2x me-2"></i></a>
-                        <a href="#"><i class="fab fa-zalo fa-2x me-2"></i></a>
-                        <a href="#"><i class="fab fa-tiktok fa-2x"></i></a>
-                    </div>
-                </div>
-
-                <!-- Google Map -->
-                <div class="col-md-4 text-center text-md-end">
-                    <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="100%" style="border:0;"
-                        allowfullscreen="" loading="lazy"></iframe>
+                <img loading="lazy" src="/images/logo/logo-2.png" alt="Pet Ninja Logo" class="img-fluid"
+                     style="min-width: 300px;">
+                <h1 class="mt-2 color fw-bold">PET NINJA</h1>
+            </div>
+            <!-- Contact Information -->
+            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                <h5 class="fw-bold">Cửa hàng Thú Cưng <span class="text-danger">PET NINJA</span></h5>
+                <p>Địa chỉ: 123 Đường ABC, Phường XYZ, Quận 1, TP Hồ Chí Minh</p>
+                <p>Điện thoại: (028) 1234 5678</p>
+                <p>Email: contact@petzone.vn</p>
+                <p>Giờ mở cửa:</p>
+                <ul class="list-unstyled">
+                    <li>
+                        <h4>Thứ 2 - Thứ 7: 8:00 - 20:00</h4>
+                    </li>
+                    <li>
+                        <h4>Chủ Nhật: 9:00 - 18:00</h4>
+                    </li>
+                </ul>
+                <div>
+                    <a href="#"><i class="fab fa-facebook fa-2x me-2"></i></a>
+                    <a href="#"><i class="fab fa-zalo fa-2x me-2"></i></a>
+                    <a href="#"><i class="fab fa-tiktok fa-2x"></i></a>
                 </div>
             </div>
+
+            <!-- Google Map -->
+            <div class="col-md-4 text-center text-md-end">
+                <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="100%" style="border:0;"
+                        allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
-    </footer>
-    <div th:insert=" ~{/module/_backToTop}"></div>
-    <div th:insert=" ~{/module/_loadingSpinner}"></div>
+    </div>
+</footer>
+<div th:insert=" ~{/module/_backToTop}"></div>
+<div th:insert=" ~{/module/_loadingSpinner}"></div>
 </body>
 <!--    BOOTSTRAP5-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 <!--    JS-->
 
 </html>
