--- a/PetShop/src/main/resources/templates/index.html
+++ b/PetShop/src/main/resources/templates/index.html
@@ -13,9 +13,8 @@
     <!--    FONT-GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-            rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+          rel="stylesheet">
     <!--    FONTAWESOME-->
     <script src="https://kit.fontawesome.com/246169b37f.js" crossorigin="anonymous"></script>
     <style>
